[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openram"
version = "1.2.0"
description = "An open-source static random access memory (SRAM) compiler"
authors = [
  { name="Matthew Guthaus", email="mrg@ucsc.edu" },
]
keywords = [ "sram", "magic", "gds", "netgen", "ngspice", "netlist" ]
readme = "README.md"
license = { text = "BSD-3-Clause License" }
requires-python = ">=3.6"